--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,12 @@
 <div class="row" id="checkResume">
   <div class="col-sm-12">
     <div class="alert alert-primary" role="alert">
-      <a href="javascript:void(0)" routerLink="/resume" >CLICK HERE FOR MY RESUME!</a>
+      <a href="javascript:void(0)" routerLink="/resume"> 
+        <svg class="bi bi-cursor-fill" width="1.3em" height="1.3em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z"/>
+        </svg>
+        CLICK HERE FOR MY RESUME!
+      </a>
     </div>
   </div>
 </div>
