--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -10,7 +10,29 @@
         <hr>
     </div>
     <div class="col-sm-12 col-md-6 wall-art">
-        <img src="../../assets/pngwave.png" alt="email logo">
+        <img id="contact-me-icon" src="../../assets/contact-icon-2.png" alt="email logo">
+        <div id="contact-info">
+        <p>
+            Cassandre Henriquez
+            <br>
+            (561)584-3089
+            <br>
+            <a id="resume-pdf" href="../../assets/Cassandre's Resume.pdf">
+                <fa-icon [icon]="faFilePdf"></fa-icon>
+                Download Resume
+            </a>
+        </p>
+            <div>
+                <a class="contact-icon-styling" href="https://github.com/cassandreh1"><i class="devicon-github-plain colored"></i></a>
+                <a class="contact-icon-styling"  href="https://www.linkedin.com/in/cassandre-henriquez-08bb4763/"><i class="devicon-linkedin-plain colored"></i></a>
+                <a class="contact-icon-styling"  href="mailto:cassandreh01@gmail.com">
+                    <svg class="bi bi-envelope-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+                    </svg>
+                </a>
+                
+            </div>
+        </div>
     </div>
     <div class="col-sm-12 col-md-6">
         <form #contactMe="ngForm" method="post" (ngSubmit)="onSubmit(contactMe)">
