--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -10,7 +10,7 @@
         <hr>
     </div>
     <div class="col-sm-12 col-md-6 wall-art">
-        <img id="contact-me-icon" src="../../assets/contact-icon-2.png" alt="email logo">
+        <img id="contact-me-icon" src="../../assets/contact-icon.png" alt="email logo">
         <div id="contact-info">
         <p>
             Cassandre Henriquez
