--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,8 +26,8 @@
         showcases my skills and upskill (forever a developer’s journey). 
         Check it out and reach out!
     </p>
-    <p>Sincerly, </p>
-    <p id="signature"> Cassnadre Henriquez</p>
+    <p>Sincerely, </p>
+    <p id="signature"> Cassandre Henriquez</p>
   </div>
   <div class="col-sm-12 col-lg-5" id="photo-container">
     <img src="../../assets/head-shot-sitting-5.jpg" alt="">
