updating for logo and resume styling

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -13,8 +13,8 @@
             <hr>
         </div>
         <div class="col-sm-12">
-            <p><img src="../../assets/owlhead-logo.png" alt="FAU owl head logo"><strong>Florida Atlantic University </strong>, Boca Raton, FL</p>
-            <p style="margin-left: 1.8em"><strong>Bachelor of Science in Computer Science </strong>, May 2016</p>
+            <p><img src="../../assets/owlhead-logo.png" alt="FAU owl head logo"><strong>Florida Atlantic University, </strong> Boca Raton, FL</p>
+            <p style="margin-left: 1.6em"><strong>Bachelor of Science in Computer Science, </strong> May 2016</p>
         </div>
     </div>
     <div  id="work-history">
