--- a/src/app/technical-skills/technical-skills.component.scss
+++ b/src/app/technical-skills/technical-skills.component.scss
@@ -24,10 +24,13 @@ hr {
         margin-right: 5px;
         margin-bottom: 5px;
         span {
-            display: inline-block;
-            font-size: 2em;
+            display: inline-block; 
             margin-right: 35px;
             margin-left: 35px;
+            margin-top: 10px;
+            i {
+                font-size: 2em;
+            }
             .devicon-vuejs-plain {
                 background-color: black;
                 padding: 5px 5px 0 5px;
@@ -35,8 +38,51 @@ hr {
                 display: inline-block;
             }
         }
+        .tooltiptext {
+            margin-right: 0;
+            margin-left: -12px;
+        }
     }
 }
+.custom-tooltip {
+    position: relative;
+    display: inline-block;
+    // border-bottom: 1px dotted black;
+  }
+  
+  .custom-tooltip .tooltiptext {
+
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: -100%;
+    // margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .custom-tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  .custom-tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 @media screen and (max-width:767px) {
     #table-content {
         .col-sm-12 {
