--- a/src/app/contact-me/contact-me.component.scss
+++ b/src/app/contact-me/contact-me.component.scss
@@ -1,70 +1,73 @@
 .row#contact-me-wrapper {
-    padding-top: 20px;
-    padding-bottom: 40px;
-    // background-color: #d4e4e4;
-    background-image: linear-gradient(to bottom, #e6f3f3, #b3d8d8);
+  padding-top: 20px;
+  padding-bottom: 40px;
+  // background-color: #d4e4e4;
+  background-image: linear-gradient(to bottom, #e6f3f3, #b3d8d8);
+  .wall-art {
+    text-align: center;
+    #resume-pdf {
+      color: red;
+    }
+    #contact-me-icon {
+      margin-top: -54px !important;
+      height: 12em;
+      animation: slideLeft 2s ease-in-out forwards;
+    }
+  }
+  .col-md-6 {
+    padding: 20px;
+    .ng-dirty.ng-invalid:not(form) {
+      border: 1px solid #a94442;
+    }
+    .error-message {
+      padding-top: 10px;
+      color: red;
+      display: flex;
+      svg {
+        margin-top: 4px;
+        margin-right: 4px;
+      }
+      p {
+        margin-bottom: 0;
+      }
+    }
+    button.btn-success {
+      margin-top: 40px;
+      background-color: #28a2c1;
+      border-color: #28a2c1;
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+    .bi-geo-alt {
+      margin-bottom: 4px;
+    }
+  }
+  #contact-info {
+    padding-top: 15px;
+  }
+  .contact-icon-styling {
+    font-size: 30px;
+    margin-right: 8px;
+    text-decoration: none;
+    svg {
+      margin-bottom: 8px;
+    }
+  }
+  @keyframes slideLeft {
+    0% {
+      transform: translateX(-100px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
+  @media screen and (max-width: 991px) {
     .wall-art {
-        text-align: center;
-        #resume-pdf {
-            color: red;
-        }
-         #contact-me-icon {
-            margin-top: -54px !important;
-            height: 12em;
-            animation: slideLeft 2s ease-in-out forwards;
-        }
-    }    
-    .col-md-6 {
-        padding: 20px;
-        .ng-dirty.ng-invalid:not(form)  {
-            border: 1px solid #a94442;
-        }
-        .error-message {
-            padding-top: 10px;
-            color: red;
-            display: flex;
-            svg {
-                margin-top: 4px;
-                margin-right: 4px;
-            }
-            p {
-                margin-bottom: 0;
-            }
-        }
-        button.btn-success  {
-            margin-top: 40px;
-            background-color: #28a2c1;
-            border-color: #28a2c1;
-            &:hover {
-                opacity: 0.5;
-            }
-        }
+      #contact-me-icon {
+        height: 8em;
+        margin-top: -46px !important;
+      }
     }
-    #contact-info {
-       padding-top: 15px; 
-    }
-    .contact-icon-styling {
-        font-size: 30px;
-        margin-right: 8px;
-        text-decoration: none;
-        svg {
-            margin-bottom: 8px;
-        }
-    }
-    @keyframes slideLeft{
-        0% {
-        transform: translateX(-100px);
-        }
-        100% {
-        transform: translateX(0px);
-        }
-    }
-    @media screen and (max-width: 991px) {
-        .wall-art {
-            #contact-me-icon {
-                height: 8em;
-                margin-top: -46px !important;
-            }
-        }
-    }  
+  }
 }
