adding tic tac toe site to portfolio

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -16,14 +16,14 @@
                 <p>Shopping like application, where a user can customize their robot.</p>
                 <p>Vue.js, Bootstrap, HTML5 & SASS</p>
                 <div>
-                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-buildabot.netlify.app">Live site</a>
+                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-buildarobot.netlify.app">Live site</a>
                     <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">View code</a>    
                 </div>
                 </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
                 <img id="mattr-logo" src="../../assets/mattr-logo.png" alt="mattr logo">
                 <h4>Mattr</h4>
-                <p>Built a digital agency homepage as a dev challenge</p>
+                <p>Developed a responsive proof of concept homepage for ad agency.</p>
                 <p>JavaScript, PHP & CSS</p>
                 <div>
                     <a class="btn btn-outline-primary margin-right-8" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
@@ -31,15 +31,16 @@
                 </div>
                 </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
-                <br>
-                <br>
-                <h4>Tic Tac Toe</h4>
-                <br>
                 <fa-icon [icon]="faHardHat" class="fa-3x" [ngStyle]="{ 'line-height': 0 }"></fa-icon>
-                <p>Coming soon...</p>
-                <!-- <a class="btn btn-outline-primary margin-right-8" href="javascript:void(0)">TBD</a>
-                <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a> -->
+                <p style="font-size: 12px; margin-bottom: 0px;">Work in progress...</p>
+                <h4>Tic Tac Toe</h4>
+                <p> Developing a fun tic tac toe game following React's tutorial. </p>
+                <p>React.js, HTML5, CSS</p>
+                <div>
+                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-tictactoe.netlify.app">Live site</a>
+                    <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/tic-tac-toe">View code</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</div> 
