adding tic tac toe logo

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -31,16 +31,26 @@
                 </div>
                 </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
-                <fa-icon [icon]="faHardHat" class="fa-3x" [ngStyle]="{ 'line-height': 0 }"></fa-icon>
-                <p style="font-size: 12px; margin-bottom: 0px;">Work in progress...</p>
-                <h4>Tic Tac Toe</h4>
-                <p> Developing a fun tic tac toe game following React's tutorial. </p>
+                <img src="../../assets/tac-tic-toe-logo.png" alt="tic tac toe logo">
+                <h4 style="margin-top: 5px;">Tic Tac Toe</h4>
+                <p> Programmed a fun tic tac toe game following React's tutorial. </p>
                 <p>React.js, HTML5, CSS</p>
                 <div>
                     <a class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-tictactoe.netlify.app">Live site</a>
                     <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/tic-tac-toe">View code</a>
                 </div>
             </div>
+            <!-- <div class="col-sm-12 col-lg-3 portfolio-item">
+                <fa-icon [icon]="faHardHat" class="fa-3x" [ngStyle]="{ 'line-height': 0 }"></fa-icon>
+                <p style="font-size: 12px; margin-bottom: 0px;">Work in progress...</p>
+                <h4 style="margin-top: 5px;">To DO</h4>
+                <p> Coming soon... </p>
+                <p></p>
+                <div>
+                    <a class="btn btn-outline-primary margin-right-8" href="">Live site</a>
+                    <a class="btn btn-outline-primary" href="">View code</a>
+                </div>
+            </div> -->
         </div>
     </div>
 </div> 
