--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,7 +10,7 @@
         p {
           margin-bottom: 10px;
         }
-        padding: 10px 0 10px 5px;
+        padding: 10px;
         #signature {
             font-family: cursive;
             font-size: 20px;
