styling update for navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,6 +27,7 @@ footer div.col-sm-12 {
     line-height: 4;
     text-align: center;
     background-color: black;
+    font-family: 'Clip', Arial, sans-serif;
     color: #ffe6ff;
     text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
         -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
