--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,15 @@
-<nav #stickyMenu class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav #stickyMenu class="navbar navbar-expand-lg fixed-top">
   <a class="navbar-brand" routerLink="/">
     <!-- <img src="../../favicon.png" alt="Cassandre logo"> -->
     Cassandre Henriquez
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <!-- <span class="navbar-toggler-icon"></span> -->
+    <fa-icon [icon]="faBars"></fa-icon>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-md-auto">
       <li class="nav-item">
         <a class="nav-link" 
           routerLink="/" 
@@ -23,13 +24,13 @@
             <span class="sr-only">(current)</span>
         </a>
         <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a (click)="onMenuClick()"class="dropdown-item" href="#about-me-wrapper">About me</a>
-          <a (click)="onMenuClick()"class="dropdown-item" href="#contact-me-wrapper">Contact me</a>
+          <a class="dropdown-item" href="#about-me-wrapper">About me</a>
+          <a class="dropdown-item" href="#contact-me-wrapper">Contact me</a>
         </div> -->
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/resume" routerLinkActive="active" > 
-          <fa-icon [icon]="faFile"></fa-icon>
+          <fa-icon [icon]="faFile" [styles]="{'color': '#ff65bd'}"></fa-icon>
           Resume</a>
       </li>
       <li class="nav-item">
