--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav #stickyMenu class="navbar navbar-expand-lg fixed-top">
   <a class="navbar-brand" routerLink="/">
-    <!-- <img src="../../favicon.png" alt="Cassandre logo"> -->
+    <img src="../../assets/cass-logo.png" alt="Cassandre logo">
     Cassandre Henriquez
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,7 +13,8 @@
       <li class="nav-item">
         <a class="nav-link" 
           routerLink="/" 
-          routerLinkActive="active">
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }">
           <!-- id="navbarDropdown" 
           role="button" 
           data-toggle="dropdown" 
@@ -30,7 +31,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/resume" routerLinkActive="active" > 
-          <fa-icon [icon]="faFile" [styles]="{'color': '#ff65bd'}"></fa-icon>
+          <fa-icon [icon]="faFile"></fa-icon>
           Resume</a>
       </li>
       <li class="nav-item">
