--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,11 @@ hr {
 .margin-bottom-5 {
     margin-bottom: 5px;
 }
+.devicon-vuejs-plain-wordmark,
+.devicon-github-plain,
+.devicon-atom-original {
+    color: white;
+}
 @font-face {
     font-family: 'Clip';
    src: url('Clip.ttf');
