--- a/src/app/technical-skills/technical-skills.component.html
+++ b/src/app/technical-skills/technical-skills.component.html
@@ -1,4 +1,4 @@
-<div class="row" id="skills-wrapper" [ngStyle]="bgColor">
+<div class="row" id="skills-wrapper">
     <div class="col-sm-12">
       <h5 class="sub-title" [ngStyle]="titleColor">
         <svg class="bi bi-tools" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -30,7 +30,7 @@
       </div>
       <div class="col-sm-12">
         <h5 class="margin-bottom-20">Methodologies</h5>
-          <div *ngFor="let method of methodologies"> {{ method }}</div>
+          <div class="white-text" *ngFor="let method of methodologies"> {{ method }}</div>
       </div>
     </div>
   </div>
