minor hero section height update

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 .navbar {
-  box-shadow: -2px 2px 10px -2px black;
+  box-shadow: -2px 2px 10px -2px #ff65bd;
   font-family: "Courier New";
   font-family: 'Clip', Arial, sans-serif;
   background-color: black;
@@ -250,9 +250,9 @@
          margin-right: 0;
       }
       .hero-section {
-        // height: 475px;
+        height: 750px;
         .title-section {
-          top: 25%;
+          // top: 25%;
         }
       }
     }
