minor navbar styling update

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 .navbar {
-  box-shadow: -2px 2px 10px -2px #ff65bd;
+  box-shadow: -2px 2px 10px -2px #ffe6ff;
   font-family: "Courier New";
   font-family: 'Clip', Arial, sans-serif;
   background-color: black;
