updating home page layout

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -79,7 +79,7 @@
             <ul class="timeline">
                 <h5>Web Developer Intern at Synechron</h5>
                 <p class="date-range"> Jun 2016 - Aug 2016</p>
-                <li>Implemented an application designed to track inventories on products such as books for a client using Angular.js, Node.js, Express.js & MongoDB. Created CRUD functionalities to the front & back-end of the application.
+                <li>Implemented an application designed to track inventories on products such as books for a client using <br>Angular.js, Node.js, Express.js & MongoDB. Created CRUD functionalities to the front & back-end of the application.
                 <a class="btn btn-outline-primary btn-sm" href="https://github.com/chenriq5/books_angular ">
                     <svg class="bi bi-code-slash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0zm-.999-3.124a.5.5 0 0 1 .33.625l-4 13a.5.5 0 0 1-.955-.294l4-13a.5.5 0 0 1 .625-.33z"/>
@@ -96,6 +96,6 @@
 </div>
 <app-technical-skills 
     [bgColor]="{'background-image': 'linear-gradient(to bottom, #e6f3f3, #b3d8d8)'}" 
-    [hrColor]="{'border-color': '#22c0e8'}"
-    [titleColor]="{'color': '#22c0e8'}">
+    [hrColor]="{'border-color': '#ff65bd'}"
+    [titleColor]="{'color': '#ff65bd'}">
 </app-technical-skills>
