--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -1,9 +1,12 @@
 .sub-title {
-    color: #22c0e8;
+    color: #ff65bd;
     line-height: 2;
 }
 hr {
-    border-color: #22c0e8;
+    border-color: #ff65bd;
+}
+h6 {
+    color: #22c0e8 !important;
 }
 .date-range,
 h5 {
