--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -12,21 +12,21 @@
                 Download Resume</a>
             <hr>
         </div>
-        <div class="col-sm-12">
+        <div class="col-sm-12 margin-left-10">
             <p><img src="../../assets/owlhead-logo.png" alt="FAU owl head logo"><strong>Florida Atlantic University, </strong> Boca Raton, FL</p>
             <p style="margin-left: 1.6em"><strong>Bachelor of Science in Computer Science, </strong> May 2016</p>
         </div>
     </div>
+    <div class="col-sm-12">
+        <h5 class="sub-title">
+            <svg class="bi bi-briefcase-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85v5.65z"/>
+            <path fill-rule="evenodd" d="M0 4.5A1.5 1.5 0 0 1 1.5 3h13A1.5 1.5 0 0 1 16 4.5v1.384l-7.614 2.03a1.5 1.5 0 0 1-.772 0L0 5.884V4.5zm5-2A1.5 1.5 0 0 1 6.5 1h3A1.5 1.5 0 0 1 11 2.5V3h-1v-.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5V3H5v-.5z"/>
+        </svg>
+        EMPLOYMENT HISTORY</h5>
+        <hr>
+    </div>
     <div  id="work-history">
-        <div class="col-sm-12">
-            <h5 class="sub-title">
-                <svg class="bi bi-briefcase-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85v5.65z"/>
-                <path fill-rule="evenodd" d="M0 4.5A1.5 1.5 0 0 1 1.5 3h13A1.5 1.5 0 0 1 16 4.5v1.384l-7.614 2.03a1.5 1.5 0 0 1-.772 0L0 5.884V4.5zm5-2A1.5 1.5 0 0 1 6.5 1h3A1.5 1.5 0 0 1 11 2.5V3h-1v-.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5V3H5v-.5z"/>
-            </svg>
-            EMPLOYMENT HISTORY</h5>
-            <hr>
-        </div>
         <div class="col-sm-12">
             <ul class="timeline">
                 <h5 >Software Engineer II at Bank of America</h5>
