adding target="_blank" to open links in new tabs

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -7,7 +7,7 @@
                     <path fill-rule="evenodd" d="M3.214 1.072C4.813.752 6.916.71 8.354 2.146A.5.5 0 0 1 8.5 2.5v11a.5.5 0 0 1-.854.354c-.843-.844-2.115-1.059-3.47-.92-1.344.14-2.66.617-3.452 1.013A.5.5 0 0 1 0 13.5v-11a.5.5 0 0 1 .276-.447L.5 2.5l-.224-.447.002-.001.004-.002.013-.006a5.017 5.017 0 0 1 .22-.103 12.958 12.958 0 0 1 2.7-.869z"/>
                 </svg>
             EDUCATION</h5>
-            <a class="btn btn-danger" href="../../assets/Cassandre's Resume.pdf">
+            <a target="_blank" class="btn btn-danger" href="../../assets/Cassandre's Resume.pdf">
                 <fa-icon [icon]="faFilePdf"></fa-icon>
                 Download Resume</a>
             <hr>
@@ -65,7 +65,7 @@
                 <li>Leveraged various SCM tools as GitHub to manage the source code of the application being developed</li>
                 <h6 class="sub-title padding-top-0">> Internal Organization</h6>
                 <li>Built help desk web application with CRUD (Create, Read, Update, Delete) functionalities for ticketing system using Angular.js. 
-                    <a class="btn btn-outline-primary btn-sm" href="https://github.com/chenriq5/HelpDesk">
+                    <a target="_blank" class="btn btn-outline-primary btn-sm" href="https://github.com/chenriq5/HelpDesk">
                         <svg class="bi bi-code-slash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0zm-.999-3.124a.5.5 0 0 1 .33.625l-4 13a.5.5 0 0 1-.955-.294l4-13a.5.5 0 0 1 .625-.33z"/>
                         </svg>
@@ -80,7 +80,7 @@
                 <h5>Web Developer Intern at Synechron</h5>
                 <p class="date-range"> Jun 2016 - Aug 2016</p>
                 <li>Implemented an application designed to track inventories on products such as books for a client using <br>Angular.js, Node.js, Express.js & MongoDB. Created CRUD functionalities to the front & back-end of the application.
-                <a class="btn btn-outline-primary btn-sm" href="https://github.com/chenriq5/books_angular ">
+                <a target="_blank" class="btn btn-outline-primary btn-sm" href="https://github.com/chenriq5/books_angular ">
                     <svg class="bi bi-code-slash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0zm-.999-3.124a.5.5 0 0 1 .33.625l-4 13a.5.5 0 0 1-.955-.294l4-13a.5.5 0 0 1 .625-.33z"/>
                     </svg>
