--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -16,8 +16,8 @@
                 <p>Shopping like application, where a user can customize their robot.</p>
                 <p>Vue.js, Bootstrap, HTML5 & SASS</p>
                 <div>
-                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-buildarobot.netlify.app">Live site</a>
-                    <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">View code</a>    
+                    <a target="_blank" class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-buildarobot.netlify.app">Live site</a>
+                    <a target="_blank" class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">View code</a>    
                 </div>
                 </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
@@ -26,8 +26,8 @@
                 <p>Developed a responsive proof of concept homepage for ad agency.</p>
                 <p>JavaScript, PHP & CSS</p>
                 <div>
-                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
-                    <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">View code</a>    
+                    <a target="_blank" class="btn btn-outline-primary margin-right-8" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
+                    <a target="_blank" class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">View code</a>    
                 </div>
                 </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
@@ -36,8 +36,8 @@
                 <p> Programmed a fun tic tac toe game following React's tutorial. </p>
                 <p>React.js, HTML5, CSS</p>
                 <div>
-                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-tictactoe.netlify.app">Live site</a>
-                    <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/tic-tac-toe">View code</a>
+                    <a target="_blank" class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-tictactoe.netlify.app">Live site</a>
+                    <a target="_blank" class="btn btn-outline-primary" href="https://github.com/cassandreh1/tic-tac-toe">View code</a>
                 </div>
             </div>
             <!-- <div class="col-sm-12 col-lg-3 portfolio-item">
