--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,15 +32,14 @@
     <p> &nbsp; &nbsp;Bonjour le Monde! I’m Cassandre Henriquez, born in Brooklyn,
       and raised in Haiti. Following the devastating 2010 earthquake in Haiti,
       my family relocated to Wellington, Palm Beach, FL where I graduated high school.
-      Upon graduation, I initially enrolled at Palm Beach State College later transferred
-      to Florida Atlantic University, where I majored and graduated with a degree in Computer Science.
+      Upon graduation, I attended Florida Atlantic University, where I majored and graduated with a degree in Computer Science.
     </p>
       <p>&nbsp; &nbsp;Initially, I was unsure which path I wanted to follow as a CS major (vast IT universe).
        It wasn’t until I took a web development class that I found my niche. I enjoy bringing 
        a website/web application to life and working on creative websites that push my CSS skills.
     </p> 
      <p>
-        &nbsp; &nbsp;I have spent the past three years as a developer in different 
+        &nbsp; &nbsp;I have spent the past four years as a developer in different 
         capacities in FSI (Financial Services and Insurance) industry. This portfolio 
         showcases my skills and upskill (forever a developer’s journey). 
         Check it out and reach out!
