--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
        a website/web application to life and working on creative websites that push my CSS skills.
     </p> 
      <p>
-        &nbsp; &nbsp;I have spent the past four years as a developer in different 
+        &nbsp; &nbsp;I have spent the past 5 years as a developer in different 
         capacities in FSI (Financial Services and Insurance) industry. This portfolio 
         showcases my skills and upskill (forever a developer’s journey). 
         Check it out and reach out!
